classDiagram
  class Super{
    + UUID id
    + DateTime createdAt
    + DateTime updatedAt
  }
  class User {

    + string firstName
    + string lastName
    + string email
    + string password
  }
  class Place {
    + string title
    + string description
    + float price
    + float latitude
    + float longitude
    + create()
    + update()
    + delete()
    + list()
  }
  class Review {

    + UUID placeId
    + UUID userId
    + int rating
    + string comment
    + create()
    + update()
    + delete()
  }
  class Amenity {

    + string name
    + string description
    + create()
    + update()
    + delete()
    + list()
  }


  Super <|-- User
  Super <|-- Place
  Super <|-- Review
  Super <|-- Amenity

  Super <|-- User
  Super <|-- Place
  Super <|-- Review
  Super <|-- Amenity
  User "1" *-- "0..*" Place : owns
  Place "1" *-- "0..*" Review : has
  Place "0..*" *-- "0..*" Amenity : has
  User "1" *-- "0..*" Review : has